# Sleuth

./: .env.example  .gitignore  README.md  pyproject.toml
sleuth/: __init__.py  __main__.py  cli.py  config.py  installer.py  repl.py  setup_wizard.py  walkthrough.py
sleuth/notify/: __init__.py  chunking.py  discord.py  telegram.py
sleuth/providers/: __init__.py  anthropic_p.py  base.py  google_p.py  openai_p.py
sleuth/scheduler/: __init__.py  catchup.py  cron.py  eta.py
sleuth/sources/: __init__.py  reddit.py
sleuth/storage/: __init__.py  drive_client.py  gdrive.py  gdrive_device.py  sqlite_store.py
sleuth/ui/: __init__.py  art.py  console.py  rotator.py  selector.py  spinners.py  theme.py  verbs.py
sleuth/workflows/: __init__.py  runner.py
tests/: conftest.py  test_catchup.py  test_cron_command.py  test_drive_client.py  test_drive_device_flow.py  test_eta.py  test_installer.py  test_local_tz.py  test_message_chunking.py  test_notify.py  test_notify_long.py  test_prompt_style.py  test_providers.py  test_reddit.py  test_repl.py  test_rotator.py  test_scheduler.py  test_selector.py  test_setup.py  test_storage.py  test_verbs.py  test_walkthrough.py  test_workflow_helpers.py
