[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleuth-cli"
version = "0.1.0"
description = "A pocket research assistant that snoops, sleuths, and files things away."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cameron Dent" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "openai>=1.40",
  "anthropic>=0.34",
  "google-genai>=0.3",
  "python-crontab>=3.0",
  "croniter>=2.0",
  "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
drive = [
  "google-auth>=2.30",
  "google-auth-oauthlib>=1.2",
  "google-api-python-client>=2.130",
]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[project.scripts]
sleuth = "sleuth.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sleuth*"]
